--- a/styles/style.css
+++ b/styles/style.css
@@ -21,6 +21,8 @@ html {
   --button-hover: lightblue;
   --font-zwart: black;
   --font-wit: white;
+  --font-footer: rgb(129, 129, 129);
+  --font-hamburger: rgb(139, 139, 139);
 }
 
 a:focus {
@@ -38,6 +40,8 @@ a:focus {
     align-items: center;
   }
 
+  /* SKIP NAAR CONTENT */
+
   .home header a.content {
     color: purple;
     position: absolute;
@@ -51,7 +55,7 @@ a:focus {
     transform: none;
   }
 
-  .home header a>svg {
+  .home header a > svg {
     margin: 0;
     padding: 0 0 0.5em;
     width: 4em;
@@ -61,7 +65,7 @@ a:focus {
     top: 0;
   }
 
-  .home header a>svg:hover {
+  .home header a > svg:hover {
     fill: var(--button-hover);
   }
 
@@ -69,13 +73,6 @@ a:focus {
     text-decoration: none;
     color: var(--font-zwart);
   }
-
-
-
-
-
-
-
 
   /* NAV EEN  */
 
@@ -124,7 +121,7 @@ a:focus {
   }
 
   .home header.toonMenu nav:nth-of-type(1) button span {
-    background-color: red;
+    background-color: var(--button-hover);
   }
 
   .home header.toonMenu nav:nth-of-type(1) button span:nth-of-type(1) {
@@ -144,12 +141,6 @@ a:focus {
     width: 1.3em;
     height: auto;
   }
-
-
-
-
-
-
 
   /* NAV HAMBURGER */
 
@@ -204,7 +195,7 @@ a:focus {
   .home header nav:nth-of-type(2) {
     margin: 0;
     padding: 0;
-    background: white;
+    background: var(--font-wit);
     list-style: none;
 
     position: fixed;
@@ -230,11 +221,11 @@ a:focus {
   .home header nav:nth-of-type(2) section p {
     margin-bottom: 2em;
     font-size: 1.5em;
-    color: rgb(139, 139, 139);
+    color: var(--font-hamburger);
   }
 
   .home header nav:nth-of-type(2) section a:first-of-type {
-    padding: .8em 2em;
+    padding: 0.8em 2em;
     background-color: var(--button-color1);
     font-weight: 100;
     color: var(--font-wit);
@@ -310,14 +301,6 @@ a:focus {
     display: none;
   }
 
-
-
-
-
-
-
-
-
   /* GRIJZE SLIDER */
 
   .home main section:nth-of-type(1) {
@@ -334,13 +317,6 @@ a:focus {
     margin: 0;
     font-size: 12px;
   }
-
-
-
-
-
-
-
 
   /* FIGURE */
 
@@ -392,9 +368,11 @@ a:focus {
     display: inline-block;
 
     padding: 0.5em 1.75em;
-    background-image: linear-gradient(90deg,
-        var(--button-color1) 50%,
-        var(--button-hover) 50%);
+    background-image: linear-gradient(
+      90deg,
+      var(--button-color1) 50%,
+      var(--button-hover) 50%
+    );
     background-size: 200% 100%;
     transition: 0.3s;
     outline: none;
@@ -410,12 +388,6 @@ a:focus {
   .home main section:nth-of-type(2) div a:hover {
     background-position: right center;
   }
-
-
-
-
-
-
 
   /* EERSTE CARROUSEL */
 
@@ -458,7 +430,7 @@ a:focus {
     font-weight: 400;
   }
 
-  .home main section:nth-of-type(3) h4~p {
+  .home main section:nth-of-type(3) h4 ~ p {
     font-size: 16px;
     font-weight: 200;
   }
@@ -471,12 +443,6 @@ a:focus {
   .home main section:nth-of-type(3) p {
     margin: 0;
   }
-
-
-
-
-
-
 
   /* TWEE ARTIKELEN NAAST ELKAAR */
 
@@ -524,9 +490,11 @@ a:focus {
     color: var(--font-zwart);
     font-size: 16px;
     font-weight: 400;
-    background-image: linear-gradient(90deg,
-        var(--button-color2) 50%,
-        var(--button-hover) 50%);
+    background-image: linear-gradient(
+      90deg,
+      var(--button-color2) 50%,
+      var(--button-hover) 50%
+    );
     background-size: 200% 100%;
     transition: 0.3s;
     outline: none;
@@ -555,12 +523,6 @@ a:focus {
     background-position: 0 0, 0 32.5em;
     list-style: none;
   }
-
-
-
-
-
-
 
   /* TWEEDE CARROUSEL */
 
@@ -602,7 +564,7 @@ a:focus {
     font-weight: 400;
   }
 
-  .home main section:nth-of-type(4) h4~p {
+  .home main section:nth-of-type(4) h4 ~ p {
     font-size: 16px;
     font-weight: 200;
   }
@@ -615,12 +577,6 @@ a:focus {
   .home main section:nth-of-type(4) p {
     margin: 0;
   }
-
-
-
-
-
-
 
   /* 5e section */
 
@@ -658,9 +614,11 @@ a:focus {
     color: var(--font-zwart);
     font-size: 16px;
     font-weight: 400;
-    background-image: linear-gradient(90deg,
-        var(--button-color2) 50%,
-        var(--button-hover) 50%);
+    background-image: linear-gradient(
+      90deg,
+      var(--button-color2) 50%,
+      var(--button-hover) 50%
+    );
     background-size: 200% 100%;
     transition: 0.3s;
     outline: none;
@@ -677,12 +635,6 @@ a:focus {
     background-position: right center;
     color: var(--font-wit);
   }
-
-
-
-
-
-
 
   /* TWEEDE ARTIKEL  */
 
@@ -730,9 +682,11 @@ a:focus {
     color: var(--font-zwart);
     font-size: 16px;
     font-weight: 400;
-    background-image: linear-gradient(90deg,
-        var(--button-color2) 50%,
-        var(--button-hover) 50%);
+    background-image: linear-gradient(
+      90deg,
+      var(--button-color2) 50%,
+      var(--button-hover) 50%
+    );
     background-size: 200% 100%;
     transition: 0.3s;
     outline: none;
@@ -758,15 +712,8 @@ a:focus {
 
     background-size: 100% 30em;
     background-repeat: no-repeat;
-    background-position: 0 0, 0 32.5em;
     list-style: none;
   }
-
-
-
-
-
-
 
   /* Zesde section  */
 
@@ -810,9 +757,11 @@ a:focus {
     left: 1em;
 
     padding: 0.5em 1.75em;
-    background-image: linear-gradient(90deg,
-        var(--button-color1) 50%,
-        var(--button-hover) 50%);
+    background-image: linear-gradient(
+      90deg,
+      var(--button-color1) 50%,
+      var(--button-hover) 50%
+    );
     background-size: 200% 100%;
     transition: 0.3s;
     outline: none;
@@ -829,16 +778,10 @@ a:focus {
     color: var(--font-wit);
   }
 
-
-
-
-
-
-
   /* FOOTER  */
 
   .home footer {
-    background-color: black;
+    background-color: var(--font-zwart);
     margin-top: 10em;
     height: 60em;
   }
@@ -850,7 +793,7 @@ a:focus {
 
   .home footer section:nth-of-type(1) {
     height: 10em;
-    background-color: black;
+    background-color: var(--font-zwart);
     display: block;
     position: relative;
   }
@@ -870,8 +813,12 @@ a:focus {
     line-height: 2.3em;
   }
 
+  .home footer section:nth-of-type(1) ul li a {
+    text-transform: uppercase;
+  }
+
   .home hr {
-    color: white;
+    color: var(--font-wit);
     height: 0.125rem;
     width: 95%;
     position: absolute;
@@ -945,6 +892,10 @@ a:focus {
     background-color: lightgray;
   }
 
+  .home footer section:nth-of-type(3) ul li a {
+    display: flex;
+  }
+
   .home footer section:nth-of-type(3) ul li img {
     width: 2em;
     height: 2em;
@@ -983,25 +934,19 @@ a:focus {
 
 
 
-
-
-
-
-
-
-@media (min-width: 120em) {
-  .home header a>svg {
+@media (min-width: 64em) {
+  .home header a > svg {
     margin: 0;
     padding: 0 0 0 0.5rem;
     width: 4em;
     height: auto;
     position: absolute;
-    left: 15em;
-    top: 3.4em;
+    left: 2em;
+    top: 4em;
     z-index: 150;
   }
 
-  .home header a>svg:hover {
+  .home header a > svg:hover {
     fill: var(--button-hover);
   }
 
@@ -1012,11 +957,6 @@ a:focus {
   .home header nav:nth-of-type(2) {
     display: none;
   }
-
-
-
-
-
 
   /* DERDE NAV */
 
@@ -1034,7 +974,7 @@ a:focus {
   .home header nav:nth-of-type(3) ul:nth-of-type(1) {
     display: flex;
     list-style: none;
-    margin-left: 15em;
+    margin-left: 3em;
     padding: 0;
     gap: 1em;
     align-items: center;
@@ -1045,7 +985,7 @@ a:focus {
     list-style: none;
     gap: 1em;
     font-size: 13px;
-    margin-right: 18em;
+    margin-right: 3em;
     padding: 0;
   }
 
@@ -1055,18 +995,12 @@ a:focus {
     justify-content: flex-start;
   }
 
-
-
-
-
-
-
   /* 4e NAV */
 
   .home header nav:nth-of-type(4) {
     position: relative;
     padding: 1em 0;
-    margin: 0 15em;
+    margin: 0 3em;
 
     display: flex;
     align-items: center;
@@ -1142,22 +1076,16 @@ a:focus {
     right: 8em;
   }
 
-
-  /* EERSTE SECTION */
-
   .home main section:nth-of-type(1) {
     margin-top: 0;
   }
-
-
-
 
   /* FIGURE 64EM */
 
   .home main section:nth-of-type(2) {
     position: relative;
-    margin: 0 15em;
-    height: 38em;
+    margin: 0 3em;
+    height: 35em;
   }
 
   .home main section:nth-of-type(2) h1 {
@@ -1168,52 +1096,38 @@ a:focus {
     color: var(--font-wit);
   }
 
-  .home main section:nth-of-type(2)>div {
+  .home main section:nth-of-type(2) > div {
     position: absolute;
     left: 1em;
     bottom: 1em;
   }
 
-
-
-
-
   /* Eerste carrousel */
 
   .home main section:nth-of-type(3) {
-    margin: 5em 15em;
+    margin: 5em 3em;
   }
 
   .home main section:nth-of-type(3) img {
-    width: 30em;
+    width: 19em;
     margin: 0;
   }
-
-
-
-
-
 
   /* Tweede carrousel */
 
   .home main section:nth-of-type(4) {
-    margin: 5em 15em;
+    margin: 5em 3em;
   }
 
   .home main section:nth-of-type(4) img {
-    width: 30em;
+    width: 19em;
     margin: 0;
   }
-
-
-
-
-
 
   /* Eerste artikel  */
 
   .home main article:nth-of-type(1) {
-    margin: 5em 15em;
+    margin: 5em 3em;
   }
 
   .home main article:nth-of-type(1) ul {
@@ -1226,13 +1140,10 @@ a:focus {
     width: 50%;
   }
 
-
-
-
   /* 5e section */
 
   .home main section:nth-of-type(5) {
-    margin: 5em 15em;
+    margin: 5em 3em;
   }
 
   .home main section:nth-of-type(5) article {
@@ -1252,13 +1163,10 @@ a:focus {
     bottom: 2em;
   }
 
-
-
-
   /* Tweede artikel */
 
   .home main article:nth-of-type(2) {
-    margin: 5em 15em;
+    margin: 5em 3em;
   }
 
   .home main article:nth-of-type(2) ul {
@@ -1271,11 +1179,6 @@ a:focus {
     width: 50%;
   }
 
-  .home main article:nth-of-type(2) ul li:nth-of-type(2) {
-    background-size: 100%;
-    background-position: 0 0, 0 32.5em;
-  }
-
   .home main article:nth-of-type(2) ul li h4 {
     bottom: 3em;
   }
@@ -1284,14 +1187,8 @@ a:focus {
     bottom: 1em;
   }
 
-
-
-
-
-
-
   .home main section:nth-of-type(6) {
-    margin: 0 15em;
+    margin: 0 3em;
   }
 
   .home main section:nth-of-type(6) ul {
@@ -1299,8 +1196,12 @@ a:focus {
   }
 
   .home main section:nth-of-type(6) ul li img {
-    width: 29.3em;
-    height: 35em;
+    width: 18.6em;
+    height: auto;
+  }
+
+  .home main section:nth-of-type(6) ul li a {
+    bottom: 11.5em;
   }
 
   .home footer section:nth-of-type(1) {
@@ -1319,19 +1220,15 @@ a:focus {
     display: none;
   }
 
-
-
-
-
-
   /* FOOTER DESKTOP */
   .home footer {
     height: 22em;
+    margin-top: 0;
   }
 
   .home footer section:nth-of-type(5) {
-    margin: 0 20em;
-    padding: 2.5em 2.5em 0 2.5em;
+    margin: 0 3em;
+    padding: 2.5em 0 0 0;
     display: flex;
     gap: 3em;
 
@@ -1353,13 +1250,13 @@ a:focus {
   .home footer section:nth-of-type(5) ul:nth-of-type(2) li a {
     font-size: 12px;
     font-weight: 100;
-    color: rgb(129, 129, 129);
+    color: var(--font-footer);
   }
 
   .home footer section:nth-of-type(5) ul:nth-of-type(3) li a {
     font-size: 12px;
     font-weight: 100;
-    color: rgb(129, 129, 129);
+    color: var(--font-footer);
   }
 
   .home footer section:nth-of-type(5) ul:nth-of-type(2) li {
@@ -1386,7 +1283,7 @@ a:focus {
 
     position: absolute;
     top: 2.5em;
-    right: 2.5em;
+    right: 0;
   }
 
   .home footer section:nth-of-type(5) ul:nth-of-type(4) li {
@@ -1399,8 +1296,12 @@ a:focus {
     background-color: lightgray;
   }
 
+  .home footer section:nth-of-type(5) ul:nth-of-type(4) li a {
+    display: flex;
+  }
+
   .home footer section:nth-of-type(6) {
-    margin: 0 20em;
+    margin: 0 3em;
     display: flex;
     justify-content: flex-end;
   }
@@ -1412,6 +1313,207 @@ a:focus {
 
   .home footer section:nth-of-type(6) ul li a {
     font-size: 10px;
-    color: rgb(129, 129, 129);
+    color: var(--font-footer);
   }
+}
+
+
+
+
+/* DESKTOP */
+
+
+@media (min-width: 120em) {
+  .home header a > svg {
+    margin: 0;
+    padding: 0 0 0 0.5rem;
+    width: 4em;
+    height: auto;
+    position: absolute;
+    left: 15em;
+    top: 3.7em;
+    z-index: 150;
+  }
+
+  .home header a > svg:hover {
+    fill: var(--button-hover);
+  }
+
+  .home header nav:nth-of-type(1) {
+    display: none;
+  }
+
+  .home header nav:nth-of-type(2) {
+    display: none;
+  }
+
+
+
+
+  /* DERDE NAV */
+
+  .home header nav:nth-of-type(3) ul:nth-of-type(1) {
+    display: flex;
+    list-style: none;
+    margin-left: 15em;
+    padding: 0;
+    gap: 1em;
+    align-items: center;
+  }
+
+  .home header nav:nth-of-type(3) ul:nth-of-type(2) {
+    display: flex;
+    list-style: none;
+    gap: 1em;
+    font-size: 13px;
+    margin-right: 18em;
+    padding: 0;
+  }
+
+
+  
+
+  /* 4e NAV */
+
+  .home header nav:nth-of-type(4) {
+    position: relative;
+    padding: 1em 0;
+    margin: 0 15em;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+
+
+  /* EERSTE SECTION */
+
+  .home main section:nth-of-type(1) {
+    margin-top: 0;
+  }
+
+
+
+
+  /* FIGURE */
+
+  .home main section:nth-of-type(2) {
+    position: relative;
+    margin: 0 15em;
+    height: 38em;
+  }
+
+
+
+
+  /* Eerste carrousel */
+
+  .home main section:nth-of-type(3) {
+    margin: 5em 15em;
+  }
+
+  .home main section:nth-of-type(3) img {
+    width: 30em;
+    margin: 0;
+  }
+
+
+
+  /* Tweede carrousel */
+
+  .home main section:nth-of-type(4) {
+    margin: 5em 15em;
+  }
+
+  .home main section:nth-of-type(4) img {
+    width: 30em;
+    margin: 0;
+  }
+
+
+
+
+  /* Eerste artikel  */
+
+  .home main article:nth-of-type(1) {
+    margin: 5em 15em;
+  }
+
+
+
+
+  /* 5e section */
+
+  .home main section:nth-of-type(5) {
+    margin: 5em 15em;
+  }
+
+
+
+  /* Tweede artikel */
+
+  .home main article:nth-of-type(2) {
+    margin: 5em 15em;
+  }
+
+
+
+
+/* 6e section */
+
+
+  .home main section:nth-of-type(6) {
+    margin: 0 15em;
+  }
+
+  .home main section:nth-of-type(6) ul {
+    height: 36em;
+  }
+
+  .home main section:nth-of-type(6) ul li img {
+    width: 29.3em;
+    height: 35em;
+  }
+
+  .home main section:nth-of-type(6) ul li a {
+    bottom: 2em;
+  }
+
+  .home footer section:nth-of-type(1) {
+    display: none;
+  }
+
+
+
+   /* FOOTER DESKTOP */
+
+  .home footer section:nth-of-type(2) {
+    display: none;
+  }
+
+  .home footer section:nth-of-type(3) {
+    display: none;
+  }
+
+  .home footer section:nth-of-type(4) {
+    display: none;
+  }
+
+  .home footer {
+    height: 22em;
+  }
+
+  .home footer section:nth-of-type(5) {
+    margin: 0 20em;
+    padding: 2.5em 2.5em 0 2.5em;
+  }
+
+  .home footer section:nth-of-type(6) {
+    margin: 0 20em;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+
 }
