--- a/styles/style2.css
+++ b/styles/style2.css
@@ -20,6 +20,7 @@ html {
     --button-hover: lightblue;
     --font-zwart: black;
     --font-wit: white;
+    --font-footer: rgb(129, 129, 129);
 }
 
 a:focus {
@@ -118,7 +119,7 @@ a:focus {
     }
 
     .bestellingen header.toonMenu nav:nth-of-type(1) button span {
-        background-color: red;
+        background-color: var(--button-hover);
     }
 
     .bestellingen header.toonMenu nav:nth-of-type(1) button span:nth-of-type(1) {
@@ -397,6 +398,10 @@ a:focus {
         line-height: 2.3em;
     }
 
+    .bestellingen footer section:nth-of-type(1) ul li {
+        text-transform: uppercase;
+    }
+
     .bestellingen hr {
         color: white;
         height: 0.125rem;
@@ -504,6 +509,12 @@ a:focus {
         display: none;
     }
 
+
+
+    /* ORDER PAGINA  */
+
+
+
     body.order {
         display: flex;
         justify-content: center;
@@ -543,6 +554,267 @@ a:focus {
             background-position-x: 500%;
         }
     }
+
+}
+
+
+@media (min-width: 64em) {
+    .bestellingen header a > svg {
+      margin: 0;
+      padding: 0 0 0 0.5rem;
+      width: 4em;
+      height: auto;
+      position: absolute;
+      left: 2em;
+      top: 4em;
+      z-index: 150;
+    }
+  
+    .bestellingen header a > svg:hover {
+      fill: var(--button-hover);
+    }
+  
+    .bestellingen header nav:nth-of-type(1) {
+      display: none;
+    }
+  
+    .bestellingen header nav:nth-of-type(2) {
+      display: none;
+    }
+  
+    /* DERDE NAV */
+  
+    .bestellingen header nav:nth-of-type(3) {
+      display: block;
+      height: 2.5em;
+      width: 100%;
+      background-color: var(--slidernav);
+  
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+  
+    .bestellingen header nav:nth-of-type(3) ul:nth-of-type(1) {
+      display: flex;
+      list-style: none;
+      margin-left: 3em;
+      padding: 0;
+      gap: 1em;
+      align-items: center;
+    }
+  
+    .bestellingen header nav:nth-of-type(3) ul:nth-of-type(2) {
+      display: flex;
+      list-style: none;
+      gap: 1em;
+      font-size: 13px;
+      margin-right: 3em;
+      padding: 0;
+    }
+  
+    .bestellingen header nav:nth-of-type(3) img {
+      width: 1.5em;
+      height: auto;
+      justify-content: flex-start;
+    }
+  
+    /* 4e NAV */
+  
+    .bestellingen header nav:nth-of-type(4) {
+      position: relative;
+      padding: 1em 0;
+      margin: 0 3em;
+  
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  
+    .bestellingen header nav:nth-of-type(4) ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      gap: 2em;
+      font-size: 14px;
+    }
+  
+    .bestellingen header nav:nth-of-type(4) ul li a {
+      display: block;
+      position: relative;
+      padding: 0.2em 0;
+    }
+  
+    .bestellingen header nav:nth-of-type(4) li a::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 0.1em;
+      background-color: var(--button-hover);
+      opacity: 0;
+      transition: opacity 300ms, transform 300ms;
+    }
+  
+    .bestellingen header nav:nth-of-type(4) li a::after {
+      opacity: 1;
+      transform: scale(0);
+      transform-origin: center;
+    }
+  
+    .bestellingen header nav:nth-of-type(4) li a:hover::after,
+    .bestellingen header nav:nth-of-type(4) li a:focus::after {
+      transform: scale(1);
+    }
+  
+    /* BRON: https://css-irl.info/animating-underlines/ */
+  
+    .bestellingen header nav:nth-of-type(4) ul:nth-of-type(2) {
+      position: absolute;
+      right: 0;
+      align-items: center;
+    }
+  
+    .bestellingen header nav:nth-of-type(4) ul:nth-of-type(2) img {
+      width: 1.5em;
+      height: auto;
+    }
+  
+    .bestellingen header nav:nth-of-type(4) input {
+      height: 3em;
+      width: 12em;
+  
+      border-radius: 5em;
+      border: none;
+      background-color: var(--slidernav);
+      background-image: url(../images/zoeken.svg);
+  
+      background-repeat: no-repeat;
+      background-size: 1.5em auto;
+      background-position: 0.5em center;
+  
+      padding-left: 2.5em;
+      position: absolute;
+      right: 8em;
+    }
+
+
+    .bestellingen footer section:nth-of-type(1) {
+        display: none;
+      }
+    
+      .bestellingen footer section:nth-of-type(2) {
+        display: none;
+      }
+    
+      .bestellingen footer section:nth-of-type(3) {
+        display: none;
+      }
+    
+      .bestellingen footer section:nth-of-type(4) {
+        display: none;
+      }
+    
+      /* FOOTER DESKTOP */
+      .bestellingen footer {
+        height: 22em;
+        margin-top: 10em;
+      }
+
+
+      .bestellingen footer section:nth-of-type(5) {
+        margin: 0 3em;
+        padding: 2.5em 0 0 0;
+        display: flex;
+        gap: 3em;
+    
+        position: relative;
+      }
+    
+      .bestellingen footer section:nth-of-type(5) ul {
+        padding: 0;
+        list-style: none;
+        line-height: 2em;
+        margin: 0;
+      }
+    
+      .bestellingen footer section:nth-of-type(5) ul:nth-of-type(1) li a {
+        font-size: 12px;
+        font-weight: 500;
+        text-transform: uppercase;
+      }
+    
+      .bestellingen footer section:nth-of-type(5) ul:nth-of-type(2) li a {
+        font-size: 12px;
+        font-weight: 100;
+        color: var(--font-footer);
+      }
+    
+      .bestellingen footer section:nth-of-type(5) ul:nth-of-type(3) li a {
+        font-size: 12px;
+        font-weight: 100;
+        color: var(--font-footer);
+      }
+    
+      .bestellingen footer section:nth-of-type(5) ul:nth-of-type(2) li {
+        font-size: 14px;
+        font-weight: 500;
+        color: var(--font-wit);
+      }
+    
+      .bestellingen footer section:nth-of-type(5) ul:nth-of-type(3) li {
+        font-size: 14px;
+        font-weight: 500;
+        color: var(--font-wit);
+      }
+    
+      .bestellingen footer section:nth-of-type(5) ul:nth-of-type(4) li a img {
+        width: 1.3em;
+        height: 1.3em;
+      }
+    
+      .bestellingen footer section:nth-of-type(5) ul:nth-of-type(4) {
+        display: flex;
+        gap: 0.5em;
+        margin: 0;
+    
+        position: absolute;
+        top: 2.5em;
+        right: 0;
+      }
+    
+      .bestellingen footer section:nth-of-type(5) ul:nth-of-type(4) li {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 2.7em;
+        height: 2.7em;
+        border-radius: 50%;
+        background-color: lightgray;
+      }
+
+      .bestellingen footer section:nth-of-type(5) ul li a {
+        display: flex;
+    }
+    
+      .bestellingen footer section:nth-of-type(6) {
+        margin: 0 3em;
+        display: flex;
+        justify-content: flex-end;
+      }
+    
+      .bestellingen footer section:nth-of-type(6) ul {
+        display: flex;
+        gap: 1em;
+      }
+    
+      .bestellingen footer section:nth-of-type(6) ul li a {
+        font-size: 10px;
+        color: var(--font-footer);
+      }
+
 
 }
 
@@ -701,159 +973,42 @@ a:focus {
     }
 
 
-    /* 
-FOOTER DESKTOP */
 
 
-    .bestellingen footer section:nth-of-type(1) {
-        display: none;
-    }
-
-    .bestellingen footer section:nth-of-type(2) {
-        display: none;
-    }
-
-    .bestellingen footer section:nth-of-type(3) {
-        display: none;
-    }
-
-    .bestellingen footer section:nth-of-type(4) {
-        display: none;
-    }
-
-    .bestellingen footer {
-        height: 22em;
-    }
+/* FOOTER DESKTOP */
 
 
-    .bestellingen footer section:nth-of-type(5) {
-        margin: 0 20em;
-        padding: 2.5em 2.5em 0 2.5em;
-        display: flex;
-        gap: 3em;
+.bestellingen footer section:nth-of-type(1) {
+    display: none;
+  }
 
-        position: relative;
-    }
+  .bestellingen footer section:nth-of-type(2) {
+    display: none;
+  }
 
-    .bestellingen footer section:nth-of-type(5) ul {
-        padding: 0;
-        list-style: none;
-        line-height: 2em;
-        margin: 0;
-    }
+  .bestellingen footer section:nth-of-type(3) {
+    display: none;
+  }
 
-    .bestellingen footer section:nth-of-type(5) ul:nth-of-type(1) li a {
-        font-size: 12px;
-        font-weight: 500;
-    }
-
-    .bestellingen footer section:nth-of-type(5) ul:nth-of-type(2) li a {
-        font-size: 12px;
-        font-weight: 100;
-        color: rgb(129, 129, 129);
-    }
-
-    .bestellingen footer section:nth-of-type(5) ul:nth-of-type(3) li a {
-        font-size: 12px;
-        font-weight: 100;
-        color: rgb(129, 129, 129);
-    }
-
-    .bestellingen footer section:nth-of-type(5) ul:nth-of-type(2) li {
-        font-size: 14px;
-        font-weight: 500;
-        color: var(--font-wit);
-    }
-
-    .bestellingen footer section:nth-of-type(5) ul:nth-of-type(3) li {
-        font-size: 14px;
-        font-weight: 500;
-        color: var(--font-wit);
-    }
-
-    .bestellingen footer section:nth-of-type(5) ul:nth-of-type(4) li a img {
-        width: 1.3em;
-        height: 1.3em;
-    }
-
-    .bestellingen footer section:nth-of-type(5) ul:nth-of-type(4) {
-        display: flex;
-        gap: 0.5em;
-        margin: 0;
-
-        position: absolute;
-        top: 2.5em;
-        right: 2.5em;
-    }
-
-    .bestellingen footer section:nth-of-type(5) ul:nth-of-type(4) li {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 2.7em;
-        height: 2.7em;
-        border-radius: 50%;
-        background-color: lightgray;
-    }
-
-    .bestellingen footer section:nth-of-type(6) {
-        margin: 0 20em;
-        display: flex;
-        justify-content: flex-end;
-    }
-
-    .bestellingen footer section:nth-of-type(6) ul {
-        display: flex;
-        gap: 1em;
-    }
-
-    .bestellingen footer section:nth-of-type(6) ul li a {
-        font-size: 10px;
-        color: rgb(129, 129, 129);
-    }
+  .bestellingen footer section:nth-of-type(4) {
+    display: none;
+  }
 
 
+  .bestellingen footer {
+    height: 22em;
+  }
+
+  .bestellingen footer section:nth-of-type(5) {
+    margin: 0 20em;
+    padding: 2.5em 2.5em 0 2.5em;
+  }
 
 
+  .bestellingen footer section:nth-of-type(6) {
+    margin: 0 20em;
+    display: flex;
+    justify-content: flex-end;
+  }
 
-
-    body.order {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-        background: #000;
-    }
-
-    .order main a {
-        text-decoration: none;
-        color: inherit;
-        font-size: 24px;
-    }
-
-    .order main p {
-        font-weight: 700;
-        text-align: center;
-        font-size: 40px;
-        text-transform: uppercase;
-        background: linear-gradient(90deg, #000, #fff, #000);
-        letter-spacing: 5px;
-        -webkit-background-clip: text;
-        background-clip: text;
-        -webkit-text-fill-color: transparent;
-        background-repeat: no-repeat;
-        background-size: 80%;
-        animation: shine 5s linear infinite;
-        position: relative;
-    }
-
-    @keyframes shine {
-        0% {
-            background-position-x: -500%;
-        }
-
-        100% {
-            background-position-x: 500%;
-        }
-    }
 }
